cmake_minimum_required(VERSION 2.8.7)
project(Test)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_executable(pvnoise pvolume.cxx)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
target_link_libraries(pvnoise ${VTK_LIBRARIES} noise)
install(TARGETS pvnoise DESTINATION bin)

