cmake_minimum_required(VERSION 2.8.7)
project(Test)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
include_directories(${Noise_SOURCE_DIR})
add_executable(pvnoise pvolume.cxx)
set_target_properties(pvnoise PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
set_target_properties(pvnoise PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
target_link_libraries(pvnoise ${VTK_LIBRARIES} noise ${MPI_LIBRARIES})
install(TARGETS pvnoise DESTINATION bin)

