cmake_minimum_required(VERSION 2.8.7)
project(Test)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
set(NOISE_DIR "" CACHE FILEPATH "installation of noise")
if(NOISE_DIR)
  link_directories(${NOISE_DIR}/lib)
	include_directories(${NOISE_DIR}/include)
else()
  message("NOISE_DIR NOT OK")
endif()
add_executable(sim sim.cpp)
add_executable(vis vis.cpp)
add_executable(writer writer.cpp)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
target_link_libraries(sim ${VTK_LIBRARIES} noise)
target_link_libraries(vis ${VTK_LIBRARIES})
target_link_libraries(writer ${VTK_LIBRARIES})
install(TARGETS sim vis writer DESTINATION bin)

