cmake_minimum_required(VERSION 2.8.7)
project(Test)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
include_directories(${Noise_SOURCE_DIR})
add_executable(vnoise volume.cpp)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
target_link_libraries(vnoise ${VTK_LIBRARIES} noise)
install(TARGETS vnoise DESTINATION bin)
